# 6502

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  cpu.c  main.c
include/: addrmodes.h  cpu.h  em6502.h  instructions.h  opcodes.h
src/: addrmodes.c  cpu.c  instructions.c  main.c
